--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 setuptools>=65.5.1
 wheel>=0.38.4
-boto3==1.24.59
+boto3
 jupyter==1.0.0
 ipywidgets==8.0.4
 numpy==1.24.2
@@ -10,7 +10,7 @@ scikit-learn==1.5.0
 sentence-transformers==2.2.2
 tqdm==4.66.3
 nltk==3.9
-PyYAML>=6.0
-awscli>=1.27.0
+PyYAML
+awscli
 openpyxl==3.1.2
 xlrd==2.0.1
