--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 setuptools>=65.5.1
 wheel>=0.38.4
-boto3>=1.24.50
+boto3=1.24.59
 jupyter==1.0.0
 ipywidgets==8.0.4
 numpy==1.24.2
@@ -13,4 +13,4 @@ nltk==3.9
 openpyxl==3.1.2
 xlrd==2.0.1
 PyYAML
-awscli>=1.25
+awscli=1.25.60
